[gd_scene load_steps=2 format=3 uid="uid://dbsyjy7mli3ve"]

[ext_resource type="Script" path="res://ConfigEditor/NumericCardRowScene.gd" id="1_5o8uq"]

[node name="NumericCardRowScene" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5o8uq")

[node name="Key" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "CARD KEY"

[node name="NotFound" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "!"

[node name="Amount" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="text_changed" from="Key" to="." method="_on_key_text_changed"]
[connection signal="value_changed" from="Amount" to="." method="_on_amount_value_changed"]
